# bdisc

./: .gitmodules
server/: Cargo.toml
server/bdisc/: Cargo.toml
server/bdisc/src/: main.rs
server/dal/migrations/: V1__initial.sql
server/dal/src/: lib.rs
server/dal/src/fs/: config.rs  mod.rs
server/dal/src/mysql/: mod.rs  oauth2.rs  token.rs  user.rs
server/discord/: Cargo.toml
server/discord/src/: error.rs  lib.rs  oauth2.rs  user.rs
server/proto/: Cargo.toml
server/proto/src/: lib.rs
server/proto/src/entity/: emoji.proto  guild.proto  role.proto  user.proto
server/proto/src/payload/oauth2/: login.proto
server/routes/: Cargo.toml
server/routes/src/: data.rs  error.rs  lib.rs  token.rs
server/routes/src/routes/: mod.rs
server/routes/src/routes/oauth2/: callback.rs  login.rs  mod.rs
